Fix Blog Teaser overflow problem.

--- a/wp-content/themes/passion-lms/css/main.css
+++ b/wp-content/themes/passion-lms/css/main.css
@@ -267,6 +267,8 @@ p:last-child {
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
+  max-height: 144px;
+  overflow: hidden;
 }
 
 .blog-content {
